test/equality/negative/too_few_args.mli
val f : int -> bool
(*@ equality *)
